added placeholder projects to portfolio page - obsoleted blogstyle css page - changed the hover animation to work for each word in the landing page - preemptively removed some html errors from the about me section - restyled the headings in css, added section titles in the css comments

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -11,7 +11,7 @@
     <title>About Me</title>
 </head>
 <body>
-        <header class="Heading"><!--This to be the landing page-->
+        <header class="Heading"><!--Navbar-->
             <div class = "Logo">
                 <h4 class ="abbreviatedInitials">MO</h4><!--this to be the logo-->
                 <h3 class ="nameInTitle">Martin Olson</h3>
@@ -26,29 +26,21 @@
     <!--This is where the CV stuff goes; -->
     <div class = "resumeContent">
         <section class ="aboutMe"> <!--We need a blurb for the front here, "Hi I'm Martin"-->
-            <h2>About Me</h2>
-            <h3>Web Developer</h3>
-            <time>Since 2021&nbsp;&ndash;&nbsp;</time>
-            <span>Completing coder academy fast track bootcamp</span>
+            <h2 class ="AboutMeTitle"> About Me</h2>
+        </section>
+        <section class="AboutmeBlurbSection">    
+            <h3 class ="JobTitle">Web Developer</h3>
+            <div class ="AboutMeBlurb">Since 2021&nbsp;&ndash;&nbsp;Completing coder academy fast track bootcamp</div>
+           
         </section>
             
         <section class ="Education"><!--This has to go to the About Me Page-->
            <H3>Education</H3>
-            <time>August 2021&nbsp;&ndash;&nbsp;</time>
-            <span>Enrolled in Coder Academy Fast Track Bootcamp</span>
-            <p></p>
-            <time>September 2020&nbsp;&ndash;&nbsp;</time>
-            <span>Competed Graduate Diploma of Cybersecurity at Edith Cowan University</span>
-            <p></p>
-            <time>December 2017&nbsp;&ndash;&nbsp;</time>
-            <span>Completed Master of Political Economy at the Universty of Sydney</span>
-            <p></p>
-            <time>December 2012&nbsp;&ndash;&nbsp;</time>
-            <span>Completed Master of Strategic Studies at the Australian National University</span>
-            <p></p>
-            <time>April 2011&nbsp;&ndash;&nbsp;</time> 
-            <span>Completed Bachelor of Science with Honours, majoring in microbiology</span>
-            <p></p>
+            <p>August 2021&nbsp;&ndash;&nbsp;Enrolled in Coder Academy Fast Track Bootcamp</p>
+            <p>September 2020&nbsp;&ndash;&nbsp;Competed Graduate Diploma of Cybersecurity at Edith Cowan University</p>
+            <p>December 2017&nbsp;&ndash;&nbsp;Completed Master of Political Economy at the Universty of Sydney</p>
+            <p>December 2012&nbsp;&ndash;&nbsp;Completed Master of Strategic Studies at the Australian National University</p>
+            <p>April 2011&nbsp;&ndash;&nbsp;Completed Bachelor of Science with Honours, majoring in microbiology</p>
         </section>
 
         <section class ="Skills">
@@ -63,7 +55,8 @@
 
         <section class ="Experience">
             <H3>Experience</H3>
-            TODO Experience Section
+            <div class ="experience blurb">Kinda Need to get some
+            </div>
         </section>
 
 </body>
