--- a/MyProjects.html
+++ b/MyProjects.html
@@ -11,7 +11,7 @@
     <title>Portfolio</title>
 </head>
 
-<header class="Heading"><!--This to be the landing page-->
+<header class="Heading"><!--Navbar-->
     <div class = "Logo">
         <h4 class ="abbreviatedInitials">MO</h4><!--this to be the logo-->
         <h3 class ="nameInTitle">Martin Olson</h3>
@@ -25,10 +25,41 @@
 </header>
 <body>
     <!--projects need to  have live sites and links to the source code-->
-    <section class ="PortfolioProjects">
-        <h3>Projects</h3>
-        TODO Projects section
-        <span>My finished Games</span>
+    <h3 class ="PortfolioProjectTitleSection">Projects</h3>
+
+    <section class ="PortfolioProjectSection">
+       
+        <section Class="PortfolioProject">
+            <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
+            <div class="PortfolioProjectPicture"><img src="A cat.jpg" alt="an adorable placeholder cat"></div>
+            <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
+        </section>
+        <section Class="PortfolioProject">
+                <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
+                <div class="PortfolioProjectPicture"><img src="A cat.jpg" alt="an adorable placeholder cat"></div>
+                <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
+        </section>
+        <section Class="PortfolioProject">
+                    <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
+                    <div class="PortfolioProjectPicture"><img src="A cat.jpg" alt="an adorable placeholder cat"></div>
+                    <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
+        </section>
+        <section Class="PortfolioProject">
+            <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
+            <div class="PortfolioProjectPicture"><img src="A cat.jpg" alt="an adorable placeholder cat"></div>
+            <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
+        </section>       
+         <section Class="PortfolioProject">
+            <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
+            <div class="PortfolioProjectPicture"><img src="A cat.jpg" alt="an adorable placeholder cat"></div>
+            <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
+        </section>
+        <section Class="PortfolioProject">
+            <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
+            <div class="PortfolioProjectPicture"><img src="A cat.jpg" alt="an adorable placeholder cat"></div>
+            <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
+        </section>
+
     </section>
 </body>
 </html>
