played around with the logo a bit

--- a/Index.html
+++ b/Index.html
@@ -5,65 +5,83 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Martin Olson">
-    <meta name="description" content ="Martin Olsons Portfolio">
+    <meta name="description" content="Martin Olsons Portfolio">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet"> <!--Need a real font-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <!--Need a real font-->
     <title>Martin Olson</title>
 
-</head>    
+</head>
 
 <body>
-    <header class="Heading"><!--This to be the landing page-->
-        <div class = "Logo">
-            <h4 class ="abbreviatedInitials">MO</h4><!--this to be the logo-->
-            <h3 class ="nameInTitle">Martin Olson</h3>
+    <header class="Heading">
+        <!--This to be the landing page-->
+        <div class="Logo">
+            <!--this to be the logo-->
+            <Span class="initalsLogo">
+            <h4 class="abbreviatedInitialsM">Martin</h4>
+            <h4 class="abbreviatedInitialsO">Olson</h4>
+            </Span>
+            <!--<h3 class="nameInTitle">Martin Olson</h3>-->
         </div>
-        <div class ="Navigation">
-             <!-- Internal Navbar goes here-->
-            <h3 class ="aboutMe"><a class="NavigationLink" href="AboutMe.html">About Me</a></h3>
-            <h3 class ="myProjects"><a class="NavigationLink" href="MyProjects.html">My Projects</a></h3>
-            <h3 class="myBlog"><a class="NavigationLink" href ="blog.html">My Blog</a></h3><!--delete Me once the project is submitted-->  
+        <div class="Navigation">
+            <!-- Internal Navbar goes here-->
+            <h3 class="aboutMe"><a class="NavigationLink" href="AboutMe.html">About Me</a></h3>
+            <h3 class="myProjects"><a class="NavigationLink" href="MyProjects.html">My Projects</a></h3>
+            <h3 class="myBlog"><a class="NavigationLink" href="blog.html">My Blog</a></h3>
+            <!--delete Me once the project is submitted-->
         </div>
     </header>
     <main class="introPage">
-        <div class ="LandingPage">
+        <div class="LandingPage">
             <h1 class="LandingPageHeading">
-                <span class ="primaryHeading">Hi, </span>
-                <span class ="primaryHeading">I'm </span>
-                <span class ="primaryHeading">Martin</span>
+                <span class="primaryHeading">Hi, </span>
+                <span class="primaryHeading">I'm </span>
+                <span class="primaryHeading">Martin</span>
 
-            </h1><!--front and centre-->
+            </h1>
+            <!--front and centre-->
 
-            <H2 class ="LandingPageblurb">
-                <span class ="blurb">I </span>
-                <span class ="blurb">make </span>
-                <span class ="blurb">stuff </span>
-                <span class ="blurb">for </span>
-                <span class ="blurb">the </span>
-                <span class ="blurb">web</span>
+            <H2 class="LandingPageblurb">
+                <span class="blurb">I </span>
+                <span class="blurb">make </span>
+                <span class="blurb">stuff </span>
+                <span class="blurb">for </span>
+                <span class="blurb">the </span>
+                <span class="blurb">web</span>
             </H2>
         </div>
 
         <!--maybe button to projects here??-->
-    
-        <div class ="Sidebar">
-            <Section class ="Photo"><!--Maybe send the photo to the logo?-->
-            <img class="photoOfMe" src="./Photos/professionalPhoto.png" alt="MoreProfessionalPhoto" width =90><!--the photo is mandatory for the assignment-->
-            </Section class ="SidebarLinks">
+
+        <div class="Sidebar">
+            <Section class="Photo">
+                <!--Maybe send the photo to the logo?-->
+                <img class="photoOfMe" src="./Photos/professionalPhoto.png" alt="MoreProfessionalPhoto" width=90>
+                <!--the photo is mandatory for the assignment-->
+            </Section class="SidebarLinks">
             <ul class="SocialLinks">
-                <li class="SocialLinks"><img class="emailIcon" src="./Icons for links/emailIcon.png" width=20></li><!--Email link-->
-                <li class="SocialLinks"><a href="https://github.com/MartinO55"><img class ="GithubLogo" src ="./Icons for links/GithubLogo.png" width=20></a> </li><!--links are fine, make these icons-->
-                <li class="SocialLinks"><a href="https://www.linkedin.com/in/olsonmartin/"><img class="linkedInLogo" src="./Icons for links/linkedinicon.png" width =20></a></li>
-                <li class="SocialLinks"><a href="Martin Olson CV updated Jan02.pdf"><img class ="pdfLogo" src="./Icons for links/pdfIcon.png" width=20></a></li>
+                <li class="SocialLinks"><img class="emailIcon" src="./Icons for links/emailIcon.png" width=20></li>
+                <!--Email link-->
+                <li class="SocialLinks">
+                    <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./Icons for links/GithubLogo.png" width=20></a>
+                </li>
+                <!--links are fine, make these icons-->
+                <li class="SocialLinks">
+                    <a href="https://www.linkedin.com/in/olsonmartin/"><img class="linkedInLogo" src="./Icons for links/linkedinicon.png" width=20></a>
+                </li>
+                <li class="SocialLinks">
+                    <a href="Martin Olson CV updated Jan02.pdf"><img class="pdfLogo" src="./Icons for links/pdfIcon.png" width=20></a>
+                </li>
             </ul>
         </div>
     </main>
-  
+
 
     <footer>
-    
+
     </footer>
 
 </body>
