changed placeholder cats in the portfolio, styled them a bit

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -30,7 +30,7 @@
         </section>
         <section class="AboutmeBlurbSection">    
             <h3 class ="JobTitle">Web Developer</h3>
-            <div class ="AboutMeBlurb">Since 2021&nbsp;&ndash;&nbsp;Completing coder academy fast track bootcamp</div>
+            <div class ="AboutMeBlurb">Since 2021&nbsp;&ndash;&nbsp;Completing coder academy fast track bootcamp and just beginning my journey as a web developer. I expect to finish in February and look forward ot working on your projects</div>
            
         </section>
             
