--- a/MyProjects.html
+++ b/MyProjects.html
@@ -31,32 +31,32 @@
        
         <section Class="PortfolioProject">
             <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
-            <div class="PortfolioProjectPicture"><img src="A cat.jpg" alt="an adorable placeholder cat"></div>
+            <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="./PlaceholderCats/cat on keyboard.jpg" alt="an adorable placeholder cat" width =220></div>
             <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
         </section>
         <section Class="PortfolioProject">
                 <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
-                <div class="PortfolioProjectPicture"><img src="A cat.jpg" alt="an adorable placeholder cat"></div>
+                <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="PlaceholderCats/cat on keyboard2.jpg" alt="an adorable placeholder cat" width =220></div>
                 <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
         </section>
         <section Class="PortfolioProject">
                     <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
-                    <div class="PortfolioProjectPicture"><img src="A cat.jpg" alt="an adorable placeholder cat"></div>
+                    <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="PlaceholderCats/Cat_keyboard3.jpg" alt="an adorable placeholder cat" width =220></div>
                     <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
         </section>
         <section Class="PortfolioProject">
             <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
-            <div class="PortfolioProjectPicture"><img src="A cat.jpg" alt="an adorable placeholder cat"></div>
+            <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="PlaceholderCats/Keyboard-cat-4.jpg" alt="an adorable placeholder cat" width=220></div>
             <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
         </section>       
          <section Class="PortfolioProject">
             <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
-            <div class="PortfolioProjectPicture"><img src="A cat.jpg" alt="an adorable placeholder cat"></div>
+            <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="PlaceholderCats/placeholder keyboard cat 5.jpg" alt="an adorable placeholder cat" width=220></div>
             <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
         </section>
         <section Class="PortfolioProject">
             <h4 class="PortfolioProjectTitle">Placeholder Project Title</h4>
-            <div class="PortfolioProjectPicture"><img src="A cat.jpg" alt="an adorable placeholder cat"></div>
+            <div class="PortfolioProjectPicture"><img class="PortfolioPic" src="PlaceholderCats/placeholdercat6.jpg" alt="an adorable placeholder cat" width =220></div>
             <p class="PortfolioProjectBlurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices tincidunt est. Fusce malesuada vulputate sapien ut pretium. Donec sodales leo a purus interdum, ac rhoncus sem elementum. Mauris sed sollicitudin tellus. Vestibulum dignissim dapibus orci, venenatis bibendum leo molestie eu. Vivamus sem lectus, imperdiet at venenatis vitae, volutpat vel. </p>
         </section>
 
