redid the navbar, now slightly more standardised and has some hover animations

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -11,21 +11,26 @@
     <title>About Me</title>
 </head>
 <body>
-        <header class="Heading"><!--Navbar-->
-            <div class = "Logo">
-                <h4 class ="abbreviatedInitials">MO</h4><!--this to be the logo-->
-                <h3 class ="nameInTitle">Martin Olson</h3>
-            </div>
-            <div class ="Navigation">
-                 <!-- Internal Navbar goes here-->
-                <h3 class ="landingPage"><a class="NavigationLink" href="Index.html">Landing Page</a></h3>
-                <h3 class ="myProjects"><a class="NavigationLink" href="MyProjects.html">My Projects</a></h3>
-                <h3 class="myBlog"><a class="NavigationLink" href ="blog.html">My Blog</a></h3><!--delete Me once the project is submitted-->  
-            </div>
+    <header class="Heading">
+    <div class="Logo">
+        <!--this to be the logo-->
+        <Span class="initalsLogo">
+        <h4 class="abbreviatedInitialsM">Martin</h4>
+        <h4 class="abbreviatedInitialsO">Olson</h4>
+        </Span>
+        <!--<h3 class="nameInTitle">Martin Olson</h3>-->
+    </div>
+    <div class="Navigation">
+        <!-- Internal Navbar goes here, change liks for each page-->
+        <h3 class="LandingPageLink"><a class="NavigationLink" href="Index.html">Front Page</a></h3>
+        <h3 class="myProjects"><a class="NavigationLink" href="MyProjects.html">My Projects</a></h3>
+        <h3 class="myBlog"><a class="NavigationLink" href="blog.html">My Blog</a></h3>
+        <!--delete Me once the project is submitted-->
+    </div>
     </header>
     <!--This is where the CV stuff goes; -->
     <div class = "resumeContent">
-        <section class ="aboutMe"> <!--We need a blurb for the front here, "Hi I'm Martin"-->
+        <section class ="aboutMeTitleSection"> <!--We need a blurb for the front here, "Hi I'm Martin"-->
             <h2 class ="AboutMeTitle"> About Me</h2>
         </section>
         <section class="AboutmeBlurbSection">    
