--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="Heading">
-        <!--This to be the landing page-->
+       
         <div class="Logo">
             <!--this to be the logo-->
             <Span class="initalsLogo">
@@ -27,7 +27,7 @@
             <!--<h3 class="nameInTitle">Martin Olson</h3>-->
         </div>
         <div class="Navigation">
-            <!-- Internal Navbar goes here-->
+            <!-- Internal Navbar goes here, change liks for each page-->
             <h3 class="aboutMe"><a class="NavigationLink" href="AboutMe.html">About Me</a></h3>
             <h3 class="myProjects"><a class="NavigationLink" href="MyProjects.html">My Projects</a></h3>
             <h3 class="myBlog"><a class="NavigationLink" href="blog.html">My Blog</a></h3>
