--- a/MyProjects.html
+++ b/MyProjects.html
@@ -11,18 +11,23 @@
     <title>Portfolio</title>
 </head>
 
-<header class="Heading"><!--Navbar-->
-    <div class = "Logo">
-        <h4 class ="abbreviatedInitials">MO</h4><!--this to be the logo-->
-        <h3 class ="nameInTitle">Martin Olson</h3>
+<header class="Heading">
+    <div class="Logo">
+        <!--this to be the logo-->
+        <Span class="initalsLogo">
+        <h4 class="abbreviatedInitialsM">Martin</h4>
+        <h4 class="abbreviatedInitialsO">Olson</h4>
+        </Span>
+        <!--<h3 class="nameInTitle">Martin Olson</h3>-->
     </div>
-    <div class ="Navigation">
-         <!-- Internal Navbar goes here-->
-        <h3 class ="landingPage"><a class="NavigationLink" href="Index.html">Landing Page</a></h3>
-        <h3 class ="aboutMe"><a class="NavigationLink" href="AboutMe.html">About Me</a></h3>
-        <h3 class="myBlog"><a class="NavigationLink" href ="blog.html">My Blog</a></h3><!--delete Me once the project is submitted-->  
+    <div class="Navigation">
+        <!-- Internal Navbar goes here, change liks for each page-->
+        <h3 class="LandingPageLink"><a class="NavigationLink" href="Index.html">Front Page</a></h3>
+        <h3 class="aboutMe"><a class="NavigationLink" href="AboutMe.html">About Me</a></h3>
+        <h3 class="myBlog"><a class="NavigationLink" href="blog.html">My Blog</a></h3>
+        <!--delete Me once the project is submitted-->
     </div>
-</header>
+    </header>
 <body>
     <!--projects need to  have live sites and links to the source code-->
     <h3 class ="PortfolioProjectTitleSection">Projects</h3>
