--- a/blog.html
+++ b/blog.html
@@ -11,18 +11,23 @@
     <title>Martin Olson's Blog from 1998</title>
 </head>
 <body>
-    <header class ="Heading"> 
-       <div class = "Logo">
-        <h4 class ="abbreviatedInitials">MO</h4><!--this to be the logo-->
-        <h3 class ="nameInTitle">Martin Olson</h3>
-    </div>
-    <div class ="Navigation">
-         <!-- Internal Navbar goes here-->
-         <h3 class ="landingPage"><a class="NavigationLink" href="Index.html">Landing Page</a></h3>
-        <h3 class ="aboutMe"><a class="NavigationLink" href="AboutMe.html">About Me</a></h3>
-        <h3 class ="myProjects"><a class="NavigationLink" href="MyProjects.html">My Projects</a></h3>
-    </div>
-    </header>
+    <header class="Heading">
+        <div class="Logo">
+            <!--this to be the logo-->
+            <Span class="initalsLogo">
+            <h4 class="abbreviatedInitialsM">Martin</h4>
+            <h4 class="abbreviatedInitialsO">Olson</h4>
+            </Span>
+            <!--<h3 class="nameInTitle">Martin Olson</h3>-->
+        </div>
+        <div class="Navigation">
+            <!-- Internal Navbar goes here, change liks for each page-->
+            <h3 class="LandingPageLink"><a class="NavigationLink" href="Index.html">Front Page</a></h3>
+            <h3 class="myProjects"><a class="NavigationLink" href="MyProjects.html">My Projects</a></h3>
+            <h3 class="aboutMe"><a class="NavigationLink" href="AboutMe.html">About Me</a></h3>
+            <!--delete Me once the project is submitted-->
+        </div>
+        </header>
     <H1>Thank god for Lorem Ipsum</H1><!--So I have never written a blog post in my life, and this is built purely to satisfy requirements. I have no idea what a modern blog should look like-->
     <!--And I am pretty sure it only does that,although it does have that old geocities charm-->
    
