--- a/Index.html
+++ b/Index.html
@@ -63,7 +63,8 @@
                 <!--the photo is mandatory for the assignment-->
             </Section class="SidebarLinks">
             <ul class="SocialLinks">
-                <li class="SocialLinks"><img class="emailIcon" src="./Icons for links/emailIcon.png" width=20></li>
+                <li class="SocialLinks">
+                    <a href="mailto:placeholder@email.com"><img class="emailIcon" src="./Icons for links/emailIcon.png" width=20></a></li>
                 <!--Email link-->
                 <li class="SocialLinks">
                     <a href="https://github.com/MartinO55"><img class="GithubLogo" src="./Icons for links/GithubLogo.png" width=20></a>
